--- a/assets/Social/socialclub.css
+++ b/assets/Social/socialclub.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
+.social_logo{
+    width: 80px;
+    height: 60px;
+}
+
 .header{
     min-height: 100vh;
     width: 100%;
